--- a/index.html
+++ b/index.html
@@ -7,4 +7,5 @@
     <body>
         <h1>Mon super site</h1>
         <img src="https://picsum.photos/200/300" alt="">
+        <h2>Voici la magie</h2>
     </body>
