j'ai rajouté une phrase

--- a/index.html
+++ b/index.html
@@ -8,4 +8,5 @@
         <h1>Mon super site</h1>
         <img src="https://picsum.photos/200/300" alt="">
         <h2>Voici la magie</h2>
+        <p>Ca y est mon site est en ligne</p>
     </body>
